<resources>
    <string name="app_name">BahaBBS</string>
    <string name="hello_world">Hello world!!</string>
    <string name="account">帳號</string>
    <string name="_back">返回</string>
    <string name="_giveUp">放棄</string>
    <string name="_save">存檔</string>
    <string name="account_digits">()!@#$%^&amp;*.=-_;:[{]}.?=0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="add">新增</string>
    <string name="reset">重置</string>
    <string name="close">關閉</string>
    <string name="reset_message">是否確定重置為預設值？</string>
    <string name="reset_ok">已成功重置輸入ID為預設值</string>
    <string name="arrow_down">▼</string>
    <string name="arrow_right">&gt;</string>
    <string name="arrow_up">▲</string>
    <string name="already_to_top">"已讀至列首"</string>
    <string name="already_to_bottom">"已讀至列尾"</string>
    <string name="notification_article_top_bottom_function">長按上一頁/下一頁可以移至該串文章的首篇/末篇</string>
    <string name="notification_block_list">輸入ID內輸入對方帳號，按下新增加入黑名單，可阻擋對方訊息</string>
    <string name="notification_header">輸入ID內輸入標題，發文時可選擇成為預設標題</string>
    <string name="notification_expression">輸入ID內輸入關鍵字，發文時可選擇當表情符號或快速語詞帶入(支援色碼)</string>
    <string name="author">作者</string>
    <string name="author_">作者：</string>
    <string name="block_list_setting">黑名單設定</string>
    <string name="article_header_setting">發文標題設定</string>
    <string name="article_expression_setting">表情符號設定</string>
    <string name="bookmark">書籤</string>
    <string name="bookmark_manager">書籤管理</string>
    <string name="cancel">取消</string>
    <string name="sure">確定</string>
    <string name="on">啟用</string>
    <string name="change_mode">切換模式</string>
    <string name="change_mode_short">切換</string>
    <string name="confirm">確認</string>
    <string name="connect">連線</string>
    <string name="del">DEL</string>
    <string name="delete">刪除</string>
    <string name="article_header_zero_error_message">第一個選項無法被刪除或移動位置</string>
    <string name="insert">加入</string>
    <string name="do_gy">推薦</string>
    <string name="do_gy_">推薦：</string>
    <string name="do_push">推文</string>
    <string name="load_temp">讀取暫存檔</string>
    <string name="save_to_temp">存入暫存檔</string>
    <string name="give_up_post_article">是否要放棄此編輯內容？</string>
    <string name="gy_this_article">是否要推薦此文章？</string>
    <string name="del_this_article">是否確定要刪除此文章？</string>
    <string name="del_this_mail">是否確定要刪除此信件？</string>
    <string name="insert_this_bookmark">是否要將此標題加入書籤？</string>
    <string name="insert_this_bookmark_search">是否要將此搜尋結果加入書籤？</string>
    <string name="delete_this_bookmark">是否確定要刪除此書籤？</string>
    <string name="exit">離開</string>
    <string name="face">表情</string>
    <string name="file">檔案</string>
    <string name="first_page">最前頁</string>
    <string name="last_page">最後頁</string>
    <string name="prev_page">上一頁</string>
    <string name="next_page">下一頁</string>
    <string name="prev_article">上一篇</string>
    <string name="next_article">下一篇</string>
    <string name="folder_boards">佈告討論區</string>
    <string name="folder_class">分組討論區</string>
    <string name="folder_favorite">我的最愛</string>
    <string name="gy_">GY：</string>
    <string name="gy_minimum">GY值下限：</string>
    <string name="input_search_article">請輸入關鍵字、作者、GY值</string>
    <string name="input_board_name">請輸入看板名稱：</string>
    <string name="input_content_here">請在此輸入內文</string>
    <string name="input_receiver_here">請在此輸入收件人ID</string>
    <string name="input_title_here">請在此輸入標題</string>
    <string name="is_post_article">是否確定要張貼此文章？</string>
    <string name="is_post_article_reply">回應至：</string>
    <string name="keyword">關鍵字</string>
    <string name="limit">限定</string>
    <string name="list_empty">這個列表是空的喔\n( ´ ▽ ` )ノ</string>
    <string name="loading">讀取中</string>
    <string name="loading_">讀取中…</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="mark_n">不限定</string>
    <string name="mark_y">限定</string>
    <string name="mark_only">限定有m標記的文章？</string>
    <string name="notices">注意事項</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="open_bookmark">開啟書籤</string>
    <string name="open_url">開啟連結</string>
    <string name="password">密碼</string>
    <string name="Username_hint">最長12位</string>
    <string name="password_hint">最長8位</string>
    <string name="password_digits">()!@#$%^&amp;*.=-_;:[{]}.?=0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="please_input_article_number">請輸入文章編號</string>
    <string name="please_input_id">請輸入ID</string>
    <string name="post">發表</string>
    <string name="post_to_board">版上</string>
    <string name="post_to_both">兩者皆是</string>
    <string name="mailbox">信箱</string>
    <string name="post_to_mail">作者信箱</string>
    <string name="reply_mail">回信</string>
    <string name="write_mail">寫信</string>
    <string name="mainbox_no_mail">您沒有信件</string>
    <string name="receiver_">收件人：</string>
    <string name="record">紀錄</string>
    <string name="reply">回覆</string>
    <string name="save_data">記住我的資料</string>
    <string name="_article">文章</string>
    <string name="search_article">搜尋文章</string>
    <string name="select_article">選擇文章</string>
    <string name="edit_article">編輯文章</string>
    <string name="delete_article">刪除文章</string>
    <string name="search">搜尋</string>
    <string name="search_board">搜尋看板</string>
    <string name="search_id">搜尋ID</string>
    <string name="search_menu_title">Search</string>
    <string name="select">選擇</string>
    <string name="select_sign">選擇簽名檔：</string>
    <string name="select_sign_msg">要使用的簽名檔(0=不加)：</string>
    <string name="send">送出</string>
    <string name="setting">設定</string>
    <string name="start_msg_1">BahaBBS是一個巴哈姆特電玩資訊站BBS討論區的手機客戶端軟體，使用時需要透過網路傳送資料，使用時請確認您的網路連線處於可連線之狀態。\n</string>
    <string name="start_msg_2">準備好成為勇者了嗎？</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="switch_connect_recovery">開啟自動連線恢復</string>
    <string name="switch_on_block_list">開啟黑名單功能</string>
    <string name="switch_on_block_list_for_title">套用至標題</string>
    <string name="symbol">符號</string>
    <string name="title">標題</string>
    <string name="title_">標題：</string>
    <string name="_warning">警告</string>
    <string name="un_input">未輸入</string>
    <string name="un_limit">不限定</string>
    <string name="no_assign">未指定</string>
    <string name="word_m">M</string>
    <string name="word_r">R</string>
    <string name="zero_word" />
    <string name="board_name">看板名稱</string>
    <string name="GY_hint">GY</string>
    <string name="author_hint">作者(第一個字打*表模糊搜尋)</string>
    <string name="keyword_hint">請輸入關鍵字</string>
    <string name="dialog_select_sign_text">0</string>
    <string name="hide_toolbar">隱藏工具列</string>
    <string name="open_toolbar">開啟工具列</string>
    <string name="system_setting_page_keep_wifi_on_sleep">防止Wifi因為待機中斷</string>
    <string name="system_setting_page_keep_wake">保持螢幕開啟</string>
    <string name="system_setting_page_enable_board_move">看板\"最後頁\"改為\"下一頁\"</string>
    <string name="system_setting_page_enable_article_move">使用文章首篇/末篇功能</string>
    <string name="system_setting_page_enable_page_animation">使用換頁動畫</string>
    <string name="system_setting_page_screen_orientation">螢幕方向</string>
    <string name="system_setting_page_screen_orientation_0">系統預設值</string>
    <string name="system_setting_page_screen_orientation_1">直立</string>
    <string name="system_setting_page_screen_orientation_2">橫向</string>
    <string-array name="system_setting_page_screen_orientation_items">
        <item>@string/system_setting_page_screen_orientation_0</item>
        <item>@string/system_setting_page_screen_orientation_1</item>
        <item>@string/system_setting_page_screen_orientation_2</item>
    </string-array>
    <string name="system_setting_page_toolbar_location">工具列位置</string>
    <string name="system_setting_page_toolbar_location_0">正下方</string>
    <string name="system_setting_page_toolbar_location_1">下方靠左</string>
    <string name="system_setting_page_toolbar_location_2">下方靠右</string>
    <string name="system_setting_page_toolbar_location_3">浮動</string>
    <string-array name="system_setting_page_toolbar_location_items">
        <item>@string/system_setting_page_toolbar_location_0</item>
        <item>@string/system_setting_page_toolbar_location_1</item>
        <item>@string/system_setting_page_toolbar_location_2</item>
        <item>@string/system_setting_page_toolbar_location_3</item>
    </string-array>
    <string name="system_setting_page_enable_gesture_on_board">使用手勢</string>
    <string name="system_setting_page_drawer_location">側邊選單位置</string>
    <string name="system_setting_page_drawer_location_0">右</string>
    <string name="system_setting_page_drawer_location_1">左</string>
    <string-array name="system_setting_page_drawer_location_items">
        <item>@string/system_setting_page_drawer_location_0</item>
        <item>@string/system_setting_page_drawer_location_1</item>
    </string-array>
    <string name="system_setting_page_toolbar_order">工具列順序</string>
    <string name="system_setting_page_toolbar_order_0">發表 最前 最後</string>
    <string name="system_setting_page_toolbar_order_1">最後 最前 發表</string>
    <string-array name="system_setting_page_toolbar_order_items">
        <item>@string/system_setting_page_toolbar_order_0</item>
        <item>@string/system_setting_page_toolbar_order_1</item>
    </string-array>
    <string name="system_setting_page_enable_auto_to_chat">登入自動進入洽特</string>
    <string name="is_under_auto_logging_chat">自動進入洽特中\n請稍後</string>
    <string name="system_setting_page_goBillingPage">贊助開發者</string>
    <string name="billing_page_note">
        開發者需要鼓勵，才能持續維護。\n
        付費版獨享功能：\n
        ． 自動登入洽特, 自動簽到Web\n
        ． 滑動手勢關閉(看板和閱讀文章)\n
        ． 工具列左移/右移(看板和閱讀文章)\n
        ． 浮動工具列\n
        ． 側邊選單位置(看板)\n
        ． 黑名單、書籤 可排序、修改\n
        ． 發文標題、表情符號 可排序、修改\n
        ． 發文快捷鍵: 縮網址(reurl)、縮圖(catbox)\n
        ． 雲端備份\n
        (持續增加中)
        
        
    </string>
    <string name="billing_page_note2">贊助一次即有付費版功能\n可重複贊助，感謝您🙏\n</string>
    <string name="billing_page_already_billing_text">已贊助</string>
    <string name="billing_page_button_90">贊助?_?</string>
    <string name="billing_page_button_check_purchase_query">檢查已購買權限</string>
    <string name="no_use">No use</string>
    <string name="StartPage_open_account">第一次登入請先至\n https://user.gamer.com.tw/openBBS.php \n啟用BBS權限 !</string>
    <string name="start_page_instructions">教學</string>
    <string name="post_toolbar_show">展開</string>
    <string name="start_connect_ip">連線位址</string>
    <string name="start_connect_ip1">bbs.gamer.com.tw</string>
    <string name="start_connect_ip2">35.201.128.35</string>
    <string name="user_config">操作模式</string>
    <string name="user_config_cant">不適用</string>
    <string name="user_config_0">彩色模式</string>
    <string name="user_config_1">動畫顯示</string>
    <string name="user_config_2">新文章</string>
    <string name="user_config_3">顯示進板畫面</string>
    <string name="user_config_4">簡化編輯器</string>
    <string name="user_config_5">關閉呼叫器</string>
    <string name="user_config_6">遠離塵囂</string>
    <string name="user_config_7">只顯示同伴</string>
    <string name="user_config_8">同伴上站通知</string>
    <string name="user_config_9">簡化進站畫面</string>
    <string name="user_config_A">不顯示推薦文章</string>
    <string name="user_config_B">公開自己的認證及年資</string>
    <string name="main_hero_step">勇者足跡</string>
    <string name="main_hero_step_msg01">請留言 (至多三行)</string>
    <string name="main_push_article_msg01">請留言</string>
</resources>