<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="?attr/bahamut_dialogBorderColor" android:padding="3dp" android:layout_width="260dp" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="?attr/bahamut_pageBackground" android:padding="1dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/content_view">
        <com.kota.telnetUI.textView.TelnetTextViewLarge
            android:textColor="?attr/bahamut_dialogTitleTextColor" android:background="?attr/bahamut_dialogTitleBackground" android:padding="6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/main_hero_step" style="@style/TextViewLarge"/>
        <View style="@style/HorizontalDivider"/>
        <LinearLayout android:orientation="vertical" android:background="?attr/bahamut_itemBackground" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.kota.telnetUI.textView.TelnetTextViewNormal
                android:textColor="?attr/bahamut_defaultTextColor" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/main_hero_step_msg01" style="@style/TextViewNormal"/>
            <View style="@style/BlockDividerHorizontal"/>
            <com.kota.Bahamut.pages.model.PostEditText
                android:id="@+id/Dialog_hero_step_content1"
                android:text="@string/zero_word"
                android:hint="@string/number_1"
                android:maxLength="48"
                style="@style/PostEditTextStyle"
                android:autofillHints="" />
            <com.kota.Bahamut.pages.model.PostEditText
                android:id="@+id/Dialog_hero_step_content2"
                android:text="@string/zero_word"
                android:hint="@string/number_2"
                android:maxLength="48"
                style="@style/PostEditTextStyle"
                android:autofillHints="" />
            <com.kota.Bahamut.pages.model.PostEditText
                android:id="@+id/Dialog_hero_step_content3"
                android:text="@string/zero_word"
                android:hint="@string/number_3"
                android:maxLength="48"
                style="@style/PostEditTextStyle"
                android:autofillHints="" />
        </LinearLayout>
        <View style="@style/ToolbarDivider.Horizontal"/>
        <LinearLayout android:id="@+id/toolbar" style="@style/toolbar">
            <Button android:id="@+id/Dialog_hero_step_cancel" android:text="@string/cancel" style="@style/DialogToolbarItem"/>
            <View style="@style/ToolbarDivider"/>
            <Button android:id="@+id/Dialog_hero_step_send" android:text="@string/send" style="@style/DialogToolbarItem"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
