<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/start_main"
            style="@style/TouchBlock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.kota.TelnetUI.TextView.TelnetTextViewLarge
                    style="@style/TextViewLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notices"
                    android:textColor="@android:color/white" />

                <com.kota.TelnetUI.TextView.TelnetTextViewSmall
                    android:id="@+id/version"
                    style="@style/TextViewSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <com.kota.TelnetUI.TextView.TelnetTextViewNormal
                style="@style/TextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_msg_1" />

            <com.kota.TelnetUI.TextView.TelnetTextViewNormal
                style="@style/TextViewLarge"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/start_msg_2" />

            <com.kota.TelnetUI.TextView.TelnetTextViewSmall
                style="@style/TextViewSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:text="@string/StartPage_open_account" />

            <com.kota.TelnetUI.TextView.TelnetTextViewSmall
                style="@style/TextViewSmall"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/start_connect_ip" />

            <RadioGroup
                android:id="@+id/radioButtonIP"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioButtonIP1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SystemSettingsCheckbox"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    android:text="@string/start_connect_ip1" />

                <RadioButton
                    android:id="@+id/radioButtonIP2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/SystemSettingsCheckbox"
                    android:textColor="@android:color/white"
                    android:textSize="24dp"
                    android:text="@string/start_connect_ip2" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/toolbar" style="@style/toolbar" android:layout_alignParentBottom="true">
        <Button android:id="@+id/Start_exitButton" android:text="@string/exit" style="@style/ToolbarItem"/>
        <View style="@style/ToolbarDivider"/>
        <Button android:id="@+id/Start_instructions" android:text="@string/start_page_instructions" style="@style/ToolbarItem" android:autofillHints="" android:contentDescription="@string/no_use"/>
        <View style="@style/ToolbarDivider"/>
        <Button android:id="@+id/Start_connectButton" android:text="@string/connect" style="@style/ToolbarItem"/>
    </LinearLayout>
</RelativeLayout>
