<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.kota.TelnetUI.TelnetHeaderItemView android:id="@+id/BoardPage_HeaderView" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <FrameLayout android:id="@+id/BoardPage_ListViewBlock" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <com.kota.TelnetUI.TextView.TelnetTextViewUltraLarge android:textColor="#ffffffff" android:gravity="center" android:id="@+id/BoardPage_ListEmptyView" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/loading_" style="@style/TextViewUltraLarge"/>
        <com.kota.ASFramework.UI.ASListView android:id="@+id/BoardPage_ListView" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@null" android:dividerHeight="0dp" style="@style/List"/>
    </FrameLayout>
    <LinearLayout android:id="@+id/toolbar" style="@style/Toolbar">
        <Button android:id="@+id/BoardPage_PostButton" android:text="@string/bookmark" style="@style/ToolbarItem"/>
        <View android:id="@+id/BoardPage_SearchButtonDivider" android:visibility="gone" style="@style/ToolbarDivider"/>
        <Button android:id="@+id/BoardPage_SearchButton" android:visibility="gone" android:text="@string/search" style="@style/ToolbarItem"/>
        <View android:id="@+id/BoardPage_SelectButtonDivider" android:visibility="gone" style="@style/ToolbarDivider"/>
        <Button android:id="@+id/BoardPage_SelectButton" android:visibility="gone" android:text="@string/select" style="@style/ToolbarItem"/>
        <View style="@style/ToolbarDivider"/>
        <Button android:id="@+id/BoardPage_FirstPageButton" android:text="@string/first_page" style="@style/ToolbarItem"/>
        <View style="@style/ToolbarDivider"/>
        <Button android:id="@+id/BoardPage_LastestPageButton" android:text="@string/last_page" style="@style/ToolbarItem"/>
    </LinearLayout>
</LinearLayout>
