<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/drawer_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/content_view" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.kota.TelnetUI.TelnetHeaderItemView android:id="@+id/BoardPage_HeaderView" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <FrameLayout android:id="@+id/BoardPage_ListViewBlock" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <com.kota.TelnetUI.TextView.TelnetTextViewUltraLarge android:textColor="@color/white" android:gravity="center" android:id="@+id/BoardPage_ListEmptyView" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/loading_" style="@style/TextViewUltraLarge"/>
            <com.kota.ASFramework.UI.ASListView android:id="@+id/BoardPage_ListView" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="-1dp" android:divider="@null" android:dividerHeight="0dp" style="@style/List"/>
        </FrameLayout>
        <LinearLayout android:id="@+id/toolbar" style="@style/Toolbar">
            <Button android:id="@+id/BoardPage_PostButton" android:text="@string/post" style="@style/ToolbarItem"/>
            <View style="@style/ToolbarDivider"/>
            <Button android:id="@+id/BoardPage_FirstPageButton" android:text="@string/first_page" style="@style/ToolbarItem"/>
            <View style="@style/ToolbarDivider"/>
            <Button android:id="@+id/BoardPage_LastestPageButton" android:text="@string/last_page" style="@style/ToolbarItem"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_gravity="end" android:orientation="vertical" android:id="@+id/menu_view" android:background="@color/black" android:layout_width="240dp" android:layout_height="match_parent">
        <Button android:id="@+id/bookmark_edit_button" android:text="@string/bookmark" style="@style/RightMenuItem"/>
        <ListView android:id="@+id/bookmark_list_view" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
        <Button android:id="@+id/search_article_button" android:text="@string/search_article" style="@style/RightMenuItem"/>
        <View android:background="@color/black" android:layout_width="match_parent" android:layout_height="1dp"/>
        <Button android:id="@+id/select_article_button" android:text="@string/select_article" style="@style/RightMenuItem"/>
        <View android:background="@color/black" android:layout_width="match_parent" android:layout_height="1dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="60dp">
            <Button android:id="@+id/block_enable_button" android:layout_width="80dp" android:layout_height="match_parent" android:text="@string/Drawer_button_text_enable" style="@style/RightMenuItem"/>
            <View android:background="@color/black" android:layout_width="1dp" android:layout_height="match_parent"/>
            <Button android:id="@+id/block_setting_button" android:layout_width="0dp" android:text="@string/block_list_setting" android:layout_weight="1" style="@style/RightMenuItem"/>
        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>